--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -31,7 +31,7 @@ jobs:
     needs: test
 
     permissions:
-      content: write
+      contents: write
       pages: write
       id-token: write
 
