--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ on:
 
 jobs:
   hello_world_job:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: hello World Action
-      run: |
-      curl -H 'Autorization: Bearer ${{secrets.API_KEY }}" https://www.google.co.in
+        run: |
+          curl -H 'Autorization: Bearer ${{secrets.API_KEY }}" https://www.google.co.in
